rnsc/test_data/rns_integration/error/parser/type_hints/methodref/trailing_tokens.rns
.class @methodref MyClass methodName (I)V trailing
.super java/lang/Object